--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,9 @@
 {
     "extends": ["airbnb", "airbnb/hooks"],
     "rules": {
-        "react/button-has-type": "off"
+        "react/button-has-type": "off",
+        "react/jsx-curly-brace-presence": "off",
+        "react/jsx-no-useless-fragment": "off",
+        "react/prop-types": "off"
     }
 }
