--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,9 @@
         "react/button-has-type": "off",
         "react/jsx-curly-brace-presence": "off",
         "react/jsx-no-useless-fragment": "off",
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        "react/no-unstable-nested-components": "off",
+        "react/function-component-definition": "off",
+        "no-else-return": "off"
     }
 }
